--- a/MsWeb/Web.config
+++ b/MsWeb/Web.config
@@ -10,8 +10,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-MsWeb-20170822023939.mdf;Initial Catalog=aspnet-MsWeb-20170822023939;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-MsWeb-20170822023939.mdf;Initial Catalog=aspnet-MsWeb-20170822023939;Integrated Security=True"
+      providerName="System.Data.SqlClient" />-->
+    <add name="GoodsEntities" connectionString="data source=139.224.129.220;initial catalog=Goods;persist security info=True;user id=sa;pwd=ms@2017;MultipleActiveResultSets=True;App=EntityFramework" 
+         providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
@@ -62,7 +64,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
-        <bindingRedirect oldVersion="0.0.0.0-10.0.0.0" newVersion="6.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-10.0.0.0" newVersion="10.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Optimization" publicKeyToken="31bf3856ad364e35" />
