--- a/MsWeb.DataObjects/MsWeb.DataObjects.csproj
+++ b/MsWeb.DataObjects/MsWeb.DataObjects.csproj
@@ -16,7 +16,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>..\MsWeb\bin\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -32,6 +32,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -43,8 +44,23 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="UserModel.cs" />
+    <Compile Include="Business\AdInfo.cs" />
+    <Compile Include="Business\CouponInfo.cs" />
+    <Compile Include="Model\AdvertisementsModel.cs" />
+    <Compile Include="Model\GoodsModel.cs" />
+    <Compile Include="Model\QuestionsModel.cs" />
+    <Compile Include="Model\UserloginrecordModel.cs" />
+    <Compile Include="Business\ReturnResult.cs" />
+    <Compile Include="Business\UserInfo.cs" />
+    <Compile Include="Model\UsersModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Business\VersionInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MsWeb.Domains\MsWeb.Domains.csproj">
+      <Project>{A53ADFC8-6456-4DCC-89A2-33BBB5FD5E70}</Project>
+      <Name>MsWeb.Domains</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
