--- a/MsWeb.DbConfigurations/MsWeb.DbConfigurations.csproj
+++ b/MsWeb.DbConfigurations/MsWeb.DbConfigurations.csproj
@@ -16,7 +16,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\MyWeb\bin\</OutputPath>
+    <OutputPath>..\MsWeb\bin\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -53,7 +53,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="UserMap.cs" />
+    <Compile Include="AdvertisementsMap.cs" />
+    <Compile Include="GoodsMap.cs" />
+    <Compile Include="QuestionsMap.cs" />
+    <Compile Include="UserloginrecordMap.cs" />
+    <Compile Include="UsersMap.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
