--- a/MsWeb/MsWeb.csproj
+++ b/MsWeb/MsWeb.csproj
@@ -220,6 +220,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Api\Controllers\AdvertisementController.cs" />
+    <Compile Include="Api\Controllers\QuestionController.cs" />
+    <Compile Include="Api\Controllers\TbkController.cs" />
+    <Compile Include="Api\Controllers\UsersController.cs" />
+    <Compile Include="Api\Controllers\VersionController.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\IdentityConfig.cs" />
@@ -325,6 +330,11 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\ScriptPatchs\V201709\Goods\" />
+    <Folder Include="Views\Advertisement\" />
+    <Folder Include="Views\Question\" />
+    <Folder Include="Views\Tbk\" />
+    <Folder Include="Views\Users\" />
+    <Folder Include="Views\Version\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
