--- a/MsWeb/Web.config
+++ b/MsWeb/Web.config
@@ -15,7 +15,11 @@
     <add name="GoodsEntities" connectionString="data source=139.224.129.220;initial catalog=Goods;persist security info=True;user id=sa;pwd=ms@2017;MultipleActiveResultSets=True;App=EntityFramework" 
          providerName="System.Data.SqlClient" />
   </connectionStrings>
-  <appSettings></appSettings>
+  <appSettings>
+    <add key="ImagePath" value="C:\Mywork\WebSite\img\goods\" />
+    <add key="Localhost" value="http://www.mingshukeji.com.cn" />
+    <add key="AppVersionFilePath" value="C:\Mywork\WebSite\Download\AppVersion.txt" />
+  </appSettings>
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
