--- a/MsWeb.Core/MsWeb.Core.csproj
+++ b/MsWeb.Core/MsWeb.Core.csproj
@@ -4,12 +4,12 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4F431599-6D30-4B07-B620-79F47C37C135}</ProjectGuid>
+    <ProjectGuid>{0443C04B-AEB4-4565-A125-597759C71DDF}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MsWeb.IServices</RootNamespace>
-    <AssemblyName>MsWeb.IServices</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <RootNamespace>MsWeb.Core</RootNamespace>
+    <AssemblyName>MsWeb.Core</AssemblyName>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -30,44 +30,23 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="log4net">
+      <HintPath>..\..\..\..\MsWeb\bin\log4net.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="Winning.Framework.DMSP.Core">
-      <HintPath>..\..\..\SCM\框架代码\Winning.Framework.DMSP\Out\Winning.Framework.DMSP.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="Winning.Framework.DMSP.DataAccess">
-      <HintPath>..\..\..\SCM\框架代码\Winning.Framework.DMSP\Out\Winning.Framework.DMSP.DataAccess.dll</HintPath>
-    </Reference>
-    <Reference Include="Winning.Framework.DMSP.EFRepository">
-      <HintPath>..\..\..\SCM\框架代码\Winning.Framework.DMSP\Out\Winning.Framework.DMSP.EFRepository.dll</HintPath>
-    </Reference>
-    <Reference Include="Winning.Framework.DMSP.Services">
-      <HintPath>..\..\..\SCM\框架代码\Winning.Framework.DMSP\Out\Winning.Framework.DMSP.Services.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IAdvertisementService.cs" />
-    <Compile Include="ICommonService.cs" />
-    <Compile Include="IGoodsService.cs" />
-    <Compile Include="IQuestionsService.cs" />
-    <Compile Include="IUsersService.cs" />
+    <Compile Include="Utils\EncryptUtil .cs" />
+    <Compile Include="Utils\ImageUtil.cs" />
+    <Compile Include="Utils\LogUtil.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\MsWeb.DataObjects\MsWeb.DataObjects.csproj">
-      <Project>{86d4db7b-a2b9-454c-965b-8b92716f4dab}</Project>
-      <Name>MsWeb.DataObjects</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\MsWeb.Domains\MsWeb.Domains.csproj">
-      <Project>{A53ADFC8-6456-4DCC-89A2-33BBB5FD5E70}</Project>
-      <Name>MsWeb.Domains</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
