--- a/MsWeb.Core/MsWeb.Core.csproj
+++ b/MsWeb.Core/MsWeb.Core.csproj
@@ -43,10 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Utils\Cryptography.cs" />
     <Compile Include="Utils\EncryptUtil .cs" />
     <Compile Include="Utils\ImageUtil.cs" />
     <Compile Include="Utils\LogUtil.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\WXBizMsgCrypt.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
