--- a/MsWeb/MsWeb.csproj
+++ b/MsWeb/MsWeb.csproj
@@ -225,6 +225,7 @@
     <Compile Include="Api\Controllers\TbkController.cs" />
     <Compile Include="Api\Controllers\UsersController.cs" />
     <Compile Include="Api\Controllers\VersionController.cs" />
+    <Compile Include="Api\Controllers\WechatController.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\IdentityConfig.cs" />
@@ -303,6 +304,10 @@
     <Content Include="Views\Coupon\FindCoupon.cshtml" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\MsWeb.Core\MsWeb.Core.csproj">
+      <Project>{0443c04b-aeb4-4565-a125-597759c71ddf}</Project>
+      <Name>MsWeb.Core</Name>
+    </ProjectReference>
     <ProjectReference Include="..\MsWeb.DataObjects\MsWeb.DataObjects.csproj">
       <Project>{86d4db7b-a2b9-454c-965b-8b92716f4dab}</Project>
       <Name>MsWeb.DataObjects</Name>
@@ -330,6 +335,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\ScriptPatchs\V201709\Goods\" />
+    <Folder Include="Views\Wechat\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
