--- a/MsWeb.Services/MsWeb.Services.csproj
+++ b/MsWeb.Services/MsWeb.Services.csproj
@@ -30,6 +30,26 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Mingshu.Framework.MSWeb.Common, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\MsWeb\bin\Mingshu.Framework.MSWeb.Common.dll</HintPath>
+    </Reference>
+    <Reference Include="Mingshu.Framework.MSWeb.Core, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\MsWeb\bin\Mingshu.Framework.MSWeb.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Mingshu.Framework.MSWeb.EFRepository, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\MsWeb\bin\Mingshu.Framework.MSWeb.EFRepository.dll</HintPath>
+    </Reference>
+    <Reference Include="Mingshu.Framework.MSWeb.Events, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\MsWeb\bin\Mingshu.Framework.MSWeb.Events.dll</HintPath>
+    </Reference>
+    <Reference Include="Mingshu.Framework.MSWeb.Services, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\MsWeb\bin\Mingshu.Framework.MSWeb.Services.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
@@ -41,23 +61,6 @@
     <Reference Include="System.Xml" />
     <Reference Include="TinyMapper">
       <HintPath>..\..\..\SCM\框架代码\Winning.Framework.DMSP\Out\TinyMapper.dll</HintPath>
-    </Reference>
-    <Reference Include="Winning.Framework.DMSP.Common, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\MsWeb\bin\Winning.Framework.DMSP.Common.dll</HintPath>
-    </Reference>
-    <Reference Include="Winning.Framework.DMSP.Core">
-      <HintPath>..\..\..\SCM\框架代码\Winning.Framework.DMSP\Out\Winning.Framework.DMSP.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="Winning.Framework.DMSP.DataAccess, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\SCM\框架代码\Winning.Framework.DMSP\Out\Winning.Framework.DMSP.DataAccess.dll</HintPath>
-    </Reference>
-    <Reference Include="Winning.Framework.DMSP.EFRepository">
-      <HintPath>..\..\..\SCM\框架代码\Winning.Framework.DMSP\Out\Winning.Framework.DMSP.EFRepository.dll</HintPath>
-    </Reference>
-    <Reference Include="Winning.Framework.DMSP.Services">
-      <HintPath>..\..\..\SCM\框架代码\Winning.Framework.DMSP\Out\Winning.Framework.DMSP.Services.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
