--- a/MsWeb/Web.config
+++ b/MsWeb/Web.config
@@ -16,7 +16,7 @@
          providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
-    <add key="ImagePath" value="C:\Mywork\WebSite\img\goods\" />
+    <add key="ImagePath" value="D:\MsWeb\images\goods\" />
     <add key="Localhost" value="http://www.mingshukeji.com.cn" />
     <add key="AppVersionFilePath" value="C:\Mywork\WebSite\Download\AppVersion.txt" />
   </appSettings>
