增加微信公众号服务接口（消息接收及发送）

--- a/MsWeb.DbConfigurations/MsWeb.DbConfigurations.csproj
+++ b/MsWeb.DbConfigurations/MsWeb.DbConfigurations.csproj
@@ -60,6 +60,7 @@
     <Compile Include="UserloginrecordMap.cs" />
     <Compile Include="UsersMap.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WechatTokenMap.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MsWeb.Domains\MsWeb.Domains.csproj">
