--- a/MsWeb.Services/MsWeb.Services.csproj
+++ b/MsWeb.Services/MsWeb.Services.csproj
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.QualityTools.Testing.Fakes, Version=11.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+    </Reference>
     <Reference Include="Mingshu.Framework.MSWeb.Common, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\MsWeb\bin\Mingshu.Framework.MSWeb.Common.dll</HintPath>
@@ -49,6 +52,9 @@
     <Reference Include="Mingshu.Framework.MSWeb.Services, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\MsWeb\bin\Mingshu.Framework.MSWeb.Services.dll</HintPath>
+    </Reference>
+    <Reference Include="MsWeb.Core.Fakes">
+      <HintPath>FakesAssemblies\MsWeb.Core.Fakes.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
@@ -71,6 +77,7 @@
     <Compile Include="QuestionsService.cs" />
     <Compile Include="UsersService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WechatTokenService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MsWeb.Core\MsWeb.Core.csproj">
