--- a/MsWeb.Wechat/MsWeb.Wechat.csproj
+++ b/MsWeb.Wechat/MsWeb.Wechat.csproj
@@ -4,13 +4,14 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{86D4DB7B-A2B9-454C-965B-8B92716F4DAB}</ProjectGuid>
+    <ProjectGuid>{47E118F0-A39D-4C2B-9D2E-EFE1B2BEEF79}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MsWeb.DataObjects</RootNamespace>
-    <AssemblyName>MsWeb.DataObjects</AssemblyName>
+    <RootNamespace>MsWeb.Wechat</RootNamespace>
+    <AssemblyName>MsWeb.Wechat</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -20,6 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -28,41 +30,28 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Mingshu.Framework.MSWeb.Core, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\MsWeb\bin\Mingshu.Framework.MSWeb.Core.dll</HintPath>
+    <Reference Include="MsWeb.Core">
+      <HintPath>..\..\..\..\MsWeb\bin\MsWeb.Core.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Business\AdInfo.cs" />
-    <Compile Include="Business\CouponInfo.cs" />
-    <Compile Include="Model\AdvertisementsModel.cs" />
-    <Compile Include="Model\GoodsModel.cs" />
-    <Compile Include="Model\QuestionsModel.cs" />
-    <Compile Include="Model\WechatTokenModel.cs" />
-    <Compile Include="Model\UserloginrecordModel.cs" />
-    <Compile Include="Business\ReturnResult.cs" />
-    <Compile Include="Business\UserInfo.cs" />
-    <Compile Include="Model\UsersModel.cs" />
+    <Compile Include="WechatMessageUtil.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Business\VersionInfo.cs" />
+    <Compile Include="WechatXMLModel.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MsWeb.Domains\MsWeb.Domains.csproj">
-      <Project>{A53ADFC8-6456-4DCC-89A2-33BBB5FD5E70}</Project>
-      <Name>MsWeb.Domains</Name>
-    </ProjectReference>
+    <Content Include="wechathelp.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
