--- a/MsWeb/Web.config
+++ b/MsWeb/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301879
@@ -11,8 +11,7 @@
   <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-MsWeb-20170822023939.mdf;Initial Catalog=aspnet-MsWeb-20170822023939;Integrated Security=True"
       providerName="System.Data.SqlClient" />-->
-    <add name="GoodsEntities" connectionString="data source=139.224.129.220;initial catalog=Goods;persist security info=True;user id=sa;pwd=ms@2017;MultipleActiveResultSets=True;App=EntityFramework" 
-         providerName="System.Data.SqlClient" />
+    <add name="GoodsEntities" connectionString="data source=139.224.129.220;initial catalog=Goods;persist security info=True;user id=sa;pwd=ms@2017;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="ImagePath" value="D:\MsWeb\images\goods\" />
@@ -91,7 +90,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
