--- a/MsWeb/Web.config
+++ b/MsWeb/Web.config
@@ -17,6 +17,8 @@
     <add key="ImagePath" value="D:\MsWeb\images\goods\" />
     <add key="Localhost" value="http://www.mingshukeji.com.cn" />
     <add key="AppVersionFilePath" value="C:\Mywork\WebSite\Download\AppVersion.txt" />
+    <add key="tbkRedPaper" value=""/>
+    <add key="alipayRedpaper" value=""/>
   </appSettings>
   <system.web>
     <authentication mode="None" />
